--- a/header.html
+++ b/header.html
@@ -50,18 +50,18 @@
 	</div>
 </section>
 	
-	<nav class="buttom-navbar">
+<nav class="buttom-navbar">
 		<div class="container">
 			<div class="row">
 				<div class="btn-left01  lr01  col-xl-5 col-lg-5 col-md-5  ">
 					<ul class="row">
-						<li><a href="index.html" class="first-a">Home</a></li>
+						<li><a href="/" class="first-a">Home</a></li>
 						<li><a href="aashram.html">Ashram</a></li>
 						<li class="third-a"><a href="#" >About
 								<div class="about-submenu">
 									<ul >
 										<li><a href="aashram.html">Ashram</a></li>
-										<li><a href="#">Programs</a></li>
+										<li><a href="project.html">Programs</a></li>
 										<li><a href="#">Gallery</a></li>
 										<li><a href="#">Leadership</a></li>
 										
@@ -70,8 +70,8 @@
 								</div>
 
 						</a></li>
-						<li><a href="collection.html">Shop All</a></li>
-						
+						<li><a href="#">Shop</a></li>
+						<li><a href="product.html">product</a></li>
 					</ul>
 				</div>
 				<div class="logo row col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12 ">
