--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</ul>
 				</div>
 				<div class="logo row col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12 ">
-					<a href="index.html"><img src="photo/logo-2.webp"></a>
+					<a href="/"><img src="photo/logo-2.webp"></a>
 					<a href="#" class="bar"><i class="fa-solid fa-bars"></i></a>
 				</div>
 				<div class="btn-right01 lr01 col-xl-5 col-lg-5 col-md-5  ">
