--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body>
 
-
-<section class="icons">
+<div id="header"></div>
+<!-- <section class="icons">
 		<ul>
 			
 			<li><a href="https://api.whatsapp.com/send?phone=7357346016&text=what'sapp%20number"> <img src="photo/w.png"></a></li>
@@ -156,7 +156,7 @@
    			</ul>
    		</div>
    </section>
-
+ -->
 
 
 <header class="container-fuild main-page">
