logo link fixed

--- a/index.html
+++ b/index.html
@@ -588,5 +588,25 @@
 
 
 	</script>
+
+	<script>
+  async function includeHTML(id, file) {
+    const res = await fetch(file);
+    const text = await res.text();
+    document.getElementById(id).innerHTML = text;
+  }
+
+  includeHTML("header", "header.html");
+  includeHTML("footer", "footer.html");
+</script><script>
+  async function includeHTML(id, file) {
+    const res = await fetch(file);
+    const text = await res.text();
+    document.getElementById(id).innerHTML = text;
+  }
+
+  includeHTML("header", "header.html");
+  includeHTML("footer", "footer.html");
+</script>
 </body>
 </html>
