--- a/aashram.html
+++ b/aashram.html
@@ -190,5 +190,15 @@
 
 		});
 	</script>
+	<script>
+  async function includeHTML(id, file) {
+    const res = await fetch(file);
+    const text = await res.text();
+    document.getElementById(id).innerHTML = text;
+  }
+
+  includeHTML("header", "header.html");
+  includeHTML("footer", "footer.html");
+</script>
 </body>
 </html>
