logo link fixed

--- a/header.html
+++ b/header.html
@@ -80,7 +80,7 @@
 								</div>
 
 						</a></li>
-						<li><a href="contect.html">Contacts</a></li>
+						<li><a href="contact.html">Contacts</a></li>
 						<li ></li>
 					</ul>
 
