converted aashram page to folder structure

--- a/header.html
+++ b/header.html
@@ -42,7 +42,7 @@
 				<div class="btn-left01  lr01  col-xl-5 col-lg-5 col-md-5  ">
 					<ul class="row">
 						<li><a href="/" class="first-a">Home</a></li>
-						<li><a href="aashram/index.html">Ashram</a></li>
+						<li><a href="aashram">Ashram</a></li>
 						<li class="third-a"><a href="#" >About
 								<div class="about-submenu">
 									<ul >
