converted aashram page to folder structure

--- a/aashram.html
+++ b/aashram.html
@@ -30,7 +30,7 @@
 	 		<div class="main-page-contant">
 	 			<h1 style="text-align: center ; margin-top:170px; color: white; font-family:initial; font-size:60px;">Ashram</h1>
 	 			<h5 style=" text-align: center; font-size: 20px; color: #fd8f8f;">
-	 				<a href="index.html" class="contant-a" style="color: #fd8f8f; text-decoration: none;">Home</a> / Ashram
+	 				<a href="/" class="contant-a" style="color: #fd8f8f; text-decoration: none;">Home</a> / Ashram
 	 			</h5>
 	 			
 	 		</div>
