--- a/collection.html
+++ b/collection.html
@@ -78,7 +78,7 @@
 	 		<div class="main-page-contant">
 	 			<h1 style="text-align: center ; margin-top:170px; color: white; font-family:initial; font-size:60px;">Ashram</h1>
 	 			<h5 style=" text-align: center; font-size: 20px; color: #fd8f8f;">
-	 				<a href="index.html" class="contant-a" style="color: #fd8f8f; text-decoration: none;">Home</a> / Ashram
+	 				<a href="/" class="contant-a" style="color: #fd8f8f; text-decoration: none;">Home</a> / Ashram
 	 			</h5>
 	 			
 	 		</div>
@@ -95,7 +95,7 @@
  			<div class="row">
  				<div class="temple-footer-box01 col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12">
  					<ul class=" row col-xl-5 col-lg-5  col-md-5 col-sm-12 col-12" >
- 						<li><a href="index.html">Home</a></li>
+ 						<li><a href="/">Home</a></li>
  						<li><a href="aashram.html">Ashram</a></li>
  						<li><a href="#">About</a></li>
  						<li><a href="#">Shop</a></li>
