--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
 	 		<div class="main-page-contant">
 	 			<h1 style="text-align: center ; margin-top:170px; color: white; font-family:initial; font-size:60px;">Gallery</h1>
 	 			<h5 style=" text-align: center; font-size: 20px; color: #fd8f8f;">
-	 				<a href="index.html" class="contant-a" style="color: #fd8f8f; text-decoration: none;">Home</a> / Gallery
+	 				<a href="/" class="contant-a" style="color: #fd8f8f; text-decoration: none;">Home</a> / Gallery
 	 			</h5>
 	 			
 	 		</div>
