--- a/header.html
+++ b/header.html
@@ -47,7 +47,7 @@
 								<div class="about-submenu">
 									<ul >
 										<li><a href="aashram">Ashram</a></li>
-										<li><a href="product">Programs</a></li>
+										<li><a href="project">Programs</a></li>
 										<li><a href="gallery">Gallery</a></li>
 										<li><a href="#">Leadership</a></li>
 										
