your update message

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
 
 	</script>
-
+<script src="app.js" defer></script>
 	<script>
   async function includeHTML(id, file) {
     const res = await fetch(file);
