your update message

--- a/header.html
+++ b/header.html
@@ -4,8 +4,8 @@
 	<section class="icons">
 		<ul>
 			
-			<li><a href="https://api.whatsapp.com/send?phone=7357346016&text=what'sapp%20number"> <img src="photo/w.png"></a></li>
-			<li class="back-top"><a href="#" > <img src="photo/u.png"></a></li>
+			<li><a href="https://api.whatsapp.com/send?phone=7357346016&text=what'sapp%20number"> <img src="photo/w.webp"></a></li>
+			<li class="back-top"><a href="#" > <img src="photo/u.webp"></a></li>
 			
 			
 		</ul>
@@ -20,7 +20,7 @@
 			col-sm-12 col-12">
 				<ul >
 					<li><a href=""><i class="fa-solid fa-location-dot"></i> Nayapura Chokha Jodhpur  </a></li>
-					<li><a href="tel:7726057101"> <i class="fa-solid fa-headphones"></i> Support 7726057101</a></li>
+					<li><a href="tel:7357346016"><i class="fa-solid fa-headphones"></i> Support +917357346016</a></li>
 				</ul>
 
 			</div>
