your update message

--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
 				</div>
 		<div class="gallery-buttom row">
 			<div class="g-photo-left01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12" >
-				<img src="photo/g01.jpg ">
+				<img src="photo/g01.webp ">
 			</div>
 			<div class="g-photo-right01 row col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
 			<div class="g-photo-right01-lpart col-xl-6 col-lg-6  col-md-6 col-sm-6 col-6" >
-				<img src="photo/g02.jpg">
-				<img src="photo/g03.jpg">
+				<img src="photo/g02.webp">
+				<img src="photo/g03.webp">
 			</div>
 			<div class="g-photo-right01-rpart col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-				<img src="photo/g04.jpg">
-				<img src="photo/g05.jpg">
+				<img src="photo/g04.webp">
+				<img src="photo/g05.webp">
 			</div>
 			</div>
 		</div>
