your update message

--- a/event.html
+++ b/event.html
@@ -22,7 +22,7 @@
 
 <div class="container_fuild">
 	 <div class="row"> 
-	 	<div class="main-heading col-xl-12 col-lg-12 col-md-12 col-md-12 col-sm-12 col-12 " style="background-image: url(photo/owl03.jpg); height: 350px; background-repeat: no-repeat; background-size: cover; background-position: center;" >
+	 	<div class="main-heading col-xl-12 col-lg-12 col-md-12 col-md-12 col-sm-12 col-12 " style="background-image: url(photo/owl03.webp); height: 350px; background-repeat: no-repeat; background-size: cover; background-position: center;" >
 	 		
 	 		<div class="main-page-contant">
 	 			<h1 style="text-align: center ; margin-top:170px; color: white; font-family:initial; font-size:60px;">Events</h1>
