--- a/header.html
+++ b/header.html
@@ -30,7 +30,9 @@
 					<li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
 					<li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
 					<li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
-				</ul>				
+				</ul>	
+				<div id="google_translate_element"></div>
+			
 			</div>
 		</div>
 	</div>
@@ -217,3 +219,14 @@
 
 	</script>
 <script src="app.js" defer></script>
+<script>
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({
+    pageLanguage: 'en',
+    includedLanguages: 'en,hi,fr,es,de',
+    layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+  }, 'google_translate_element');
+}
+</script>
+
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
