your update message

--- a/header.html
+++ b/header.html
@@ -65,7 +65,7 @@
 <div class="sidebar" id="sidebar">
     <div style="text-align:right; cursor:pointer;" onclick="closeSidebar()">✖</div>
     <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="new-home-page.html">Home</a></li>
         <li><a href="aashram">Ashram</a></li>
         <li><a href="project">Programs</a></li>
         <li><a href="gallery">Gallery</a></li>
