--- a/new-home-page.html
+++ b/new-home-page.html
@@ -10,6 +10,7 @@
 <link rel="canonical" href="https://www.onemovie.in/">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/new-style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
