--- a/header.html
+++ b/header.html
@@ -1,86 +1,149 @@
 <header>
-
-<!-- Top Header -->
-<section class="top-header">
-    <div class="container d-flex justify-content-between">
-        <div>
-            Nayapura Chokha Jodhpur | Support +91 7357346016
-        </div>
-        <div>
-            Social Links
-        </div>
-    </div>
-</section>
-
-<!-- Main Navbar -->
-<nav class="main-navbar">
-    <div class="container">
-
-        <!-- Mobile Header -->
-        <div class="mobile-header">
-            <a href="/">
-                <img src="photo/logo-2.webp" height="40">
-            </a>
-            <div class="hamburger" onclick="openSidebar()">
-                ☰
+    <section class="icons">
+        <ul>
+            <li><a href="https://api.whatsapp.com/send?phone=7357346016&text=what'sapp%20number"> <img
+                        src="photo/w.webp"></a></li>
+            <li class="back-top"><a href="#"> <img src="photo/u.webp"></a></li>
+        </ul>
+    </section>
+    <section class="top-header">
+        <div class="container">
+            <div class="row">
+                <div class="th-left01 col-xl-10 col-lg-10 col-md-10 col-sm-12 col-12">
+                    <ul>
+                        <li><a href=""><i class="fa-solid fa-location-dot"></i> Nayapura Chokha Jodhpur </a></li>
+                        <li><a href="tel:7357346016"><i class="fa-solid fa-headphones"></i> Support +917357346016</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="th-right01 row col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12 ">
+                    <ul>
+                        <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                    </ul>
+                    <div id="google_translate_element"></div>
+                </div>
             </div>
         </div>
-
-        <!-- Desktop Menu -->
-        <div class="desktop-menu d-flex justify-content-between align-items-center">
-
-            <ul class="nav-menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="aashram">Ashram</a></li>
-
-                <li>
-                    <a href="#">About</a>
-                    <ul class="submenu">
+    </section>
+    <nav class="buttom-navbar">
+        <div class="container">
+            <div class="row">
+                <div class="btn-left01 lr01 col-xl-5 col-lg-5 col-md-5 ">
+                    <ul class="row">
+                        <li><a href="/" class="first-a">Home</a></li>
                         <li><a href="aashram">Ashram</a></li>
-                        <li><a href="project">Programs</a></li>
-                        <li><a href="gallery">Gallery</a></li>
-                        <li><a href="#">Leadership</a></li>
+                        <li class="third-a"><a href="#">About <div class="about-submenu">
+                                    <ul>
+                                        <li><a href="aashram">Ashram</a></li>
+                                        <li><a href="project">Programs</a></li>
+                                        <li><a href="gallery">Gallery</a></li>
+                                        <li><a href="#">Leadership</a></li>
+                                    </ul>
+                                </div> </a></li>
+                        <li><a href="collection">Shop All</a></li>
                     </ul>
-                </li>
-
-                <li><a href="collection">Shop</a></li>
-            </ul>
-
-            <a href="/">
-                <img src="photo/logo-2.webp" height="50">
-            </a>
-
-            <ul class="nav-menu">
-                <li><a href="event">Events</a></li>
-                <li><a href="gallery">Gallery</a></li>
-                <li><a href="contact">Contact</a></li>
-            </ul>
-
+                </div>
+                <div class="logo row col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12 "> <a href="/"><img
+                            src="photo/logo-2.webp"></a> <a href="#" class="bar"><i class="fa-solid fa-bars"></i></a>
+                </div>
+                <div class="btn-right01 lr01 col-xl-5 col-lg-5 col-md-5 ">
+                    <ul class="row">
+                        <li><a href="event">Events</a></li>
+                        <li><a href="gallery">Gallery</a></li>
+                        <li class="third-a"><a href="#">News <div class="about-submenu about-submenu01">
+                                    <ul>
+                                        <li><a href="#"> Posts</a></li>
+                                        <li><a href="#">Classic</a></li>
+                                        <li><a href="#">Portfolio </a></li>
+                                        <li><a href="#">Chess </a></li>
+                                    </ul>
+                                </div> </a></li>
+                        <li><a href="contact">Contacts</a></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-
-    </div>
-</nav>
-
-<!-- Sidebar -->
-<div class="sidebar" id="sidebar">
-    <div style="text-align:right; cursor:pointer;" onclick="closeSidebar()">✖</div>
-    <ul>
-        <li><a href="new-home-page.html">Home</a></li>
-        <li><a href="aashram">Ashram</a></li>
-        <li><a href="project">Programs</a></li>
-        <li><a href="gallery">Gallery</a></li>
-        <li><a href="event">Events</a></li>
-        <li><a href="contact">Contact</a></li>
-    </ul>
-</div>
-
-</header>
-<script>
-function openSidebar(){
-    document.getElementById("sidebar").classList.add("active");
-}
-
-function closeSidebar(){
-    document.getElementById("sidebar").classList.remove("active");
-}
+    </nav>
+    <section class="side-bar col-sm-12 col-12">
+        <div class="croseicon"> <a href="#" class="close"><i class="fa-solid fa-xmark"></i></a> </div>
+        <div class="side-bar-img"> <img src="photo/logo-3.webp"> </div>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="">Features</a></li>
+            <li class="sidebar-third-a"><a href="">About <i class="fa-solid fa-angle-down"></i>
+                    <div class=" sidebar-about-submenu-01">
+                        <ul>
+                            <li><a href="aashram.html">Ashram</a></li>
+                            <li><a href="#">Programs</a></li>
+                            <li><a href="">Gallery</a></li>
+                            <li><a href="#">Leadership</a></li>
+                        </ul>
+                    </div>
+                </a></li>
+            <li><a href="">Shop</a></li>
+            <li><a href="event.html">Events</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li class="sidebar-third-a"><a href="">News <i class="fa-solid fa-angle-down"></i>
+                    <div class=" sidebar-about-submenu-02">
+                        <ul>
+                            <li><a href="#">Ashram</a></li>
+                            <li><a href="#">Programs</a></li>
+                            <li><a href="#">Gallery</a></li>
+                            <li><a href="#">Leadership</a></li>
+                        </ul>
+                    </div>
+                </a></li>
+            <li><a href="contact.html">Contacts</a></li>
+        </ul>
+        <div class="search-box"> <input type="text" placeholder="search" class="search-box01"> <a href="#"><i
+                    class="fa-solid fa-magnifying-glass"></i></a> </div>
+        <div class="last-icon col-sm-12 col-12">
+            <ul class="row">
+                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+            </ul>
+        </div>
+    </section>
+</header> <!-- jQuery library -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+<script src="js/owl.carousel.js"></script> <!-- Popper JS -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<!-- Latest compiled JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+<script > $(document).ready(function() {
+    $('.bar').click(function() {
+        $(".side-bar").toggleClass("slide01");
+    });
+    $('.close').click(function() {
+        $(".side-bar").toggleClass("slide01");
+    });
+    $(".owl-carousel").owlCarousel({
+        items: 1,
+        loop: true,
+        mouseDrag: true,
+        nav: true,
+        dots: true,
+        autoplay: true,
+        autoplayTimeout: 3000,
+        autoplayHoverPause: true,
+    });
+    $(window).scroll(function() {
+        var x = $(window).scrollTop();
+        if (x > 50) {
+            $('.back-top').addClass('h');
+        } else {
+            $('.back-top').removeClass('h');
+        }
+    });
+    $(".back-top").click(function() {
+        $("html, body").animate({
+            scrollTop: 0
+        }, 1000);
+    });
+}); 
 </script>
+<script src="app.js" defer></script>
