your update message

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 	<link rel="canonical" href="https://www.onemovie.in/">
 	<title>hindu temple</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css"
-		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-
+	<link rel="stylesheet" type="text/css">
+	<link rel="icon" href="../photo/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
