your update message

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-	content="Discover famous Hindu temples, Jyotirlingas, Char Dham pilgrimage info, gallery, and updates.">
-	<meta name="keywords" content="Hindu Temples, Jyotirlinga, Char Dham, Temple Gallery, Temple News">
+		content="Explore Hindu temples, darshan & aarti timings, upcoming events, and a beautiful gallery of sacred places.">
+	<meta name="keywords" content="Hindu Temples, Jyotirlinga, Char Dham, Temple Gallery, Darshan Timings, Temple Events">
 	<meta name="robots" content="index,  follow">
 	<link rel="canonical" href="https://www.onemovie.in/">
-	<title>hindu temple</title>
+	<title>Hindu Temples & Pilgrimage</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 	<link rel="icon" href="../photo/favicon.ico" type="image/x-icon">
@@ -36,122 +35,129 @@
 
 
 	<header class="container-fuild main-page">
-
 		<div class="owl-carousel owl-theme">
 			<div class="slider01 s-box wow fadeIn">
 				<div class="tra001">
-					<h1>"Three Things Cannot Be Long Hidden: <br>
-						The Sun, The Moon, And The Truth" </h1>
-					<h6>Buddha</h6>
+					<h6>WELCOME TO</h6>
+					<h1>Divine Hindu Temples<br>and Sacred Yatras</h1>
+					<p style="color:#fdd6e3; max-width:650px; margin:10px auto 25px;">
+						Plan your darshan, explore ancient temples, and experience the spiritual heritage of India with
+						carefully curated information, galleries, and events.
+					</p>
+					<div class="mf01">
+						<a href="#darshan">View Darshan Timings</a>
+					</div>
 				</div>
 			</div>
 			<div class="slider02 s-box wow fadeIn">
 				<div class="tra001">
-					<h1>"No One Saves Us But Ourselves. <br>
-						We Ourselves Must Walk The path" </h1>
-					<h6>Buddha</h6>
+					<h6>JYOTIRLINGA & CHAR DHAM</h6>
+					<h1>Discover India’s<br>Most Revered Shrines</h1>
+					<p style="color:#fdd6e3; max-width:650px; margin:10px auto 25px;">
+						Get an overview of Jyotirlingas, Char Dham routes, nearby places, and important travel details
+						before you begin your yatra.
+					</p>
+					<div class="mf01">
+						<a href="#featured-temples">Explore Temples</a>
+					</div>
 				</div>
 			</div>
 			<div class="slider03 s-box wow fadeIn">
 				<div class="tra001">
-					<h1>"Three Things Cannot Be Long Hidden: <br>
-						The Sun, The Moon, And The Truth" </h1>
-					<h6>Mahatma Gandhi</h6>
+					<h6>EVENTS & FESTIVALS</h6>
+					<h1>Stay Updated With<br>Upcoming Poojas & Sevas</h1>
+					<p style="color:#fdd6e3; max-width:650px; margin:10px auto 25px;">
+						From daily aarti to annual utsavs, track what’s happening and participate in upcoming temple
+						events around you.
+					</p>
+					<div class="mf01">
+						<a href="#events">View All Events</a>
+					</div>
 				</div>
 			</div>
-
-
 		</div>
-
 	</header>
 
-	<section class="programs">
+	<!-- Quick highlight cards -->
+	<section class="programs" id="featured-temples">
 		<div class="container">
 			<div class="top-box01">
-				<div class=" program col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-					<h6>PROGRAMS</h6>
+				<div class="program col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+					<h6>HIGHLIGHTS</h6>
 					<span>
-						Meditation, Yoga, Retreats, Free<br>
-						Programs & More...
+						Popular Temples, Yatras &<br>
+						Spiritual Experiences
 					</span>
 				</div>
 			</div>
 			<div class="buttom-box01 row">
 				<div class="b-b01 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-
 					<div class="b-b01-img b-b01-img01">
 						<div class="tra">
-							<a href="#"><i class="fa-solid fa-plus"></i></a>
+							<a href="aashram"><i class="fa-solid fa-plus"></i></a>
 						</div>
 					</div>
-					<h2>The Happiness Program</h2>
+					<h2>Famous Temples</h2>
 					<div class="none01">
-
-						<p>The practical knowledge of breathing techniques gives you balance and wisdom.</p>
-						<div class="mf01"><a href="#">More Info</a></div>
+						<p>Read about iconic Jyotirlinga, Shakti Peeth, and other renowned temples across India.</p>
+						<div class="mf01"><a href="aashram">View Temples</a></div>
 					</div>
 				</div>
 				<div class="b-b01 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-
 					<div class="b-b01-img b-b01-img02">
 						<div class="tra">
-							<a href="#"><i class="fa-solid fa-plus"></i></a>
+							<a href="event"><i class="fa-solid fa-plus"></i></a>
 						</div>
 					</div>
-					<h2>Sahaj Samadhi Meditation</h2>
-
+					<h2>Upcoming Yatras</h2>
 					<div class="none01">
-
-						<p>The state of samadhi will help you experience deep inner peace as well as increase
-							self-awareness.</p>
-						<div class="mf01"><a href="#">More Info</a></div>
+						<p>Stay informed about important yatras, special poojas, and seasonal festivities.</p>
+						<div class="mf01"><a href="event">View Events</a></div>
 					</div>
 				</div>
 				<div class="b-b01 col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
-
 					<div class="b-b01-img b-b01-img03">
 						<div class="tra">
-							<a href="#"><i class="fa-solid fa-plus"></i></a>
+							<a href="gallery"><i class="fa-solid fa-plus"></i></a>
 						</div>
 					</div>
-					<h2>Advanced Meditation Program</h2>
+					<h2>Temple Gallery</h2>
 					<div class="none01">
-
-						<p>For an extraordinary sense of peace, you have to go beyond your habitual active mind.</p>
-						<div class="mf01"><a href="#">More Info</a></div>
+						<p>Experience the beauty of deities, mandirs, and festivals through our curated gallery.</p>
+						<div class="mf01"><a href="gallery">View Photos</a></div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-
-
-	<section class="welcome">
+	<!-- About section -->
+	<section class="welcome" id="about">
 		<div class="container">
 			<div class="row">
-				<div class="wel-left01 col-xl-6 col-lg-6 col-md-6">
-					<img src="photo/04.webp">
+				<div class="wel-left01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+					<img src="photo/04.webp" alt="Hindu temple view">
 				</div>
-				<div class="wel-right01 col-xl-6 col-lg-6 col-md-6">
-					<h6>ABOUT ME</h6>
-					<h1>Explore the world through my lens.</h1>
+				<div class="wel-right01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+					<h6>ABOUT THIS PLATFORM</h6>
+					<h1>Connecting Devotees With<br>Temples Across India</h1>
 					<p>
-						"Hi, I'm [Your Name], a passionate photographer with a keen eye for [specific photography style,
-						e.g., portraits, landscapes, events]. With [X] years of experience, I strive to tell stories and
-						evoke emotions through every frame. My journey began [mention how/why you started photography],
-						and since then, it has been a path of endless creativity and exploration. Let's create something
-						beautiful together!" </p>
-					<a href="aashram.html">Read More</a>
+						This website is dedicated to devotees who wish to learn about sacred Hindu temples, important
+						yatras, and spiritual events. Discover temple histories, explore photo galleries, and plan your
+						visit with practical information on darshan timings, festivals, and nearby attractions.
+					</p>
+					<p style="color:darkgray;">
+						Whether you are planning a pilgrimage or simply seeking divine inspiration, our aim is to bring
+						the temple experience closer to you.
+					</p>
+					<a href="aashram">Read More</a>
 				</div>
 			</div>
-
 		</div>
-
 	</section>
 
 
-	<section class="gallery">
+	<section class="gallery" id="gallery">
 		<div class="container">
 			<div class=" gallery-top col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
 				<h6>GALLERY</h6>
@@ -183,7 +189,7 @@
 
 
 
-	<section class="container_fuild event">
+	<section class="container_fuild event" id="events">
 		<div class="rw">
 			<div class="container  size">
 				<div class="top-box01">
@@ -209,8 +215,8 @@
 
 					<div class="ef-name col-xl-7 col-lg-7 col-md-7
 				col-sm-12 col-12 ">
-						<h4><a href="#" class="ef-name-a">Gong Yoga Relaxation and Meditation</a></h4>
-						<h5><i class="fa-solid fa-calendar-days"></i> from 8:00 am to 5:00 pm</h5>
+						<h4><a href="#" class="ef-name-a">Special Morning Aarti & Abhishekam</a></h4>
+						<h5><i class="fa-solid fa-calendar-days"></i> Daily from 6:00 am to 8:00 am</h5>
 
 						<div class="may">
 							<h1>11</h1>
@@ -239,8 +245,8 @@
 
 					<div class="ef-name col-xl-7 col-lg-7 col-md-7
 				col-sm-12 col-12 ">
-						<h4><a href="#" class="ef-name-a">India: Unravel the Most Amazing Spots</a></h4>
-						<h5><i class="fa-solid fa-calendar-days"></i> from 8:00 am to 5:00 pm</h5>
+						<h4><a href="#" class="ef-name-a">Monthly Purnima Satsang & Bhajan</a></h4>
+						<h5><i class="fa-solid fa-calendar-days"></i> Every Purnima evening</h5>
 
 						<div class="may">
 							<h1>12</h1>
@@ -269,8 +275,8 @@
 
 					<div class="ef-name col-xl-7 col-lg-7 col-md-7
 				col-sm-12 col-12 ">
-						<h4><a href="#" class="ef-name-a">South America Grand Yoga Tour</a></h4>
-						<h5><i class="fa-solid fa-calendar-days"></i> from 8:00 am to 5:00 pm</h5>
+						<h4><a href="#" class="ef-name-a">Festival of Lights – Deepawali</a></h4>
+						<h5><i class="fa-solid fa-calendar-days"></i> Annual celebration with special pooja</h5>
 
 						<div class="may">
 							<h1>13</h1>
@@ -299,8 +305,8 @@
 
 					<div class="ef-name col-xl-7 col-lg-7 col-md-7
 				col-sm-12 col-12 ">
-						<h4><a href="#" class="ef-name-a">The New Moon Gong of the Spring</a></h4>
-						<h5><i class="fa-solid fa-calendar-days"></i> from 8:00 am to 5:00 pm</h5>
+						<h4><a href="#" class="ef-name-a">Mahashivratri Night Jagran</a></h4>
+						<h5><i class="fa-solid fa-calendar-days"></i> All-night bhajan & darshan</h5>
 
 						<div class="may">
 							<h1>14</h1>
@@ -323,32 +329,32 @@
 	</section>
 
 
-	<section class="contectpage">
+	<section class="contectpage" id="darshan">
 		<div class="contectpage-dr">
 			<div class="contectpage-row">
 				<div class="contectpage-left01">
-					<h6>CONTECT</h6>
-					<h1>Dakshina:Yoga’s Practice of “Giving Back”</h1>
-					<p>Join the Happiness Program. Experience a calm mind, reduced anxiety, increased energy levels and
-						sustainable happiness everyday!.</p>
+					<h6>DARSHAN & CONTACT</h6>
+					<h1>Plan Your Visit & Get In Touch</h1>
+					<p>Find darshan timings, special aarti schedules, and send us your queries about temples, yatras,
+						or events. We are happy to guide devotees on their spiritual journey.</p>
 
-					<a href="#">
-						LEARN MORE
+					<a href="contact">
+						VIEW FULL CONTACT PAGE
 					</a>
 				</div>
 
 				<div class="contectpage-right01">
 					<div class="cr-input">
-						<input class="name-email gra" type="text" placeholder="Enter Your Name">
+						<input class="name-email gra" type="text" placeholder="Enter your name">
 						&nbsp;&nbsp;&nbsp;
-						<input class="name-email gra" type="email" placeholder="Enter Your E-Mail">
+						<input class="name-email gra" type="email" placeholder="Enter your e‑mail">
 					</div>
-					<input class="address gra" type="text" placeholder="Enter Your Address">
+					<input class="address gra" type="text" placeholder="City / Temple you want to know about">
 
 
-					<textarea placeholder="Enter Your Message" cols="50" rows="4" class="message "></textarea>
+					<textarea placeholder="Write your message or question here" cols="50" rows="4" class="message "></textarea>
 
-					<input type="submit" value="Submit" class="sand01 gra">
+					<input type="submit" value="Send Message" class="sand01 gra">
 
 
 					<!-- <div class="focus01">
