your update message

--- a/collection.html
+++ b/collection.html
@@ -189,6 +189,7 @@
       document.getElementById("product-list").innerHTML = "<p>⚠️ Error loading products</p>";
     });
   </script>
+<script src="app.js" defer></script>
 <script>
   async function includeHTML(id, file) {
     const res = await fetch(file);
