--- a/project.html
+++ b/project.html
@@ -51,6 +51,7 @@
 
 <div id="footer"></div>
 
+<script src="app.js" defer></script>
 <script>
   async function includeHTML(id, file) {
     const res = await fetch(file);
