--- a/aashram.html
+++ b/aashram.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
 	
-
 </head>
 <body>
 
@@ -108,6 +107,7 @@
 
 
 
+	<script src="app.js" defer></script>
 	<script>
   async function includeHTML(id, file) {
     const res = await fetch(file);
