--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>hindu temple</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
+	
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-
+	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
-
+	
 </head>
 <body>
 <div id="header"></div>
@@ -114,6 +114,7 @@
 
 
 
+	<script src="app.js" defer></script>
 	<script>
   async function includeHTML(id, file) {
     const res = await fetch(file);
