--- a/event.html
+++ b/event.html
@@ -7,12 +7,12 @@
 	<title>hindu temple</title>
 	<link rel="stylesheet" type="text/css" href="css/myevent.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-
+	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
-
+	
 </head>
 <body>
 
@@ -223,6 +223,7 @@
 
 
 
+	<script src="app.js" defer></script>
 	<script>
   async function includeHTML(id, file) {
     const res = await fetch(file);
