your update message

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						carefully curated information, galleries, and events.
 					</p>
 					<div class="mf01">
-						<a href="#darshan">View Darshan Timings</a>
+						<a href="new.html">View Darshan Timings</a>
 					</div>
 				</div>
 			</div>
