your update message

--- a/header.html
+++ b/header.html
@@ -72,31 +72,31 @@
         <div class="side-bar-img"> <img src="photo/logo-3.webp"> </div>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="">Features</a></li>
-            <li class="sidebar-third-a"><a href="">About <i class="fa-solid fa-angle-down"></i>
+            <li><a href="aashram">Ashram</a></li>
+            <li class="sidebar-third-a"><a href="#">About <i class="fa-solid fa-angle-down"></i>
                     <div class=" sidebar-about-submenu-01">
                         <ul>
-                            <li><a href="aashram.html">Ashram</a></li>
-                            <li><a href="#">Programs</a></li>
-                            <li><a href="">Gallery</a></li>
+                            <li><a href="aashram">Ashram</a></li>
+                            <li><a href="project">Programs</a></li>
+                            <li><a href="gallery">Gallery</a></li>
                             <li><a href="#">Leadership</a></li>
                         </ul>
                     </div>
                 </a></li>
-            <li><a href="">Shop</a></li>
-            <li><a href="event.html">Events</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li class="sidebar-third-a"><a href="">News <i class="fa-solid fa-angle-down"></i>
+            <li><a href="collection">Shop All</a></li>
+            <li><a href="event">Events</a></li>
+            <li><a href="gallery">Gallery</a></li>
+            <li class="sidebar-third-a"><a href="#">News <i class="fa-solid fa-angle-down"></i>
                     <div class=" sidebar-about-submenu-02">
                         <ul>
-                            <li><a href="#">Ashram</a></li>
-                            <li><a href="#">Programs</a></li>
-                            <li><a href="#">Gallery</a></li>
-                            <li><a href="#">Leadership</a></li>
+                            <li><a href="#"> Posts</a></li>
+                            <li><a href="#">Classic</a></li>
+                            <li><a href="#">Portfolio </a></li>
+                            <li><a href="#">Chess </a></li>
                         </ul>
                     </div>
                 </a></li>
-            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="contact">Contacts</a></li>
         </ul>
         <div class="search-box"> <input type="text" placeholder="search" class="search-box01"> <a href="#"><i
                     class="fa-solid fa-magnifying-glass"></i></a> </div>
