--- a/header.html
+++ b/header.html
@@ -108,63 +108,5 @@
             </ul>
         </div>
     </section>
-</header> <!-- jQuery library -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-<script src="js/owl.carousel.js"></script> <!-- Popper JS -->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    $(document).ready(function () {
-        // Open / close sidebar menu (mobile)
-        $('.bar').on('click', function (e) {
-            e.preventDefault();
-            $('.side-bar').toggleClass('slide01');
-        });
-
-        $('.close').on('click', function (e) {
-            e.preventDefault();
-            $('.side-bar').toggleClass('slide01');
-        });
-
-        // Toggle sidebar dropdowns (About / News) on tap for mobile
-        $('.sidebar-third-a > a').on('click', function (e) {
-            // Prevent immediate navigation so submenu can open
-            e.preventDefault();
-            var $parent = $(this).parent('.sidebar-third-a');
-            $parent.toggleClass('open');
-        });
-
-        // Owl carousel (if present)
-        if ($('.owl-carousel').length && typeof $('.owl-carousel').owlCarousel === 'function') {
-            $('.owl-carousel').owlCarousel({
-                items: 1,
-                loop: true,
-                mouseDrag: true,
-                nav: true,
-                dots: true,
-                autoplay: true,
-                autoplayTimeout: 3000,
-                autoplayHoverPause: true
-            });
-        }
-
-        // Back-to-top button
-        $(window).on('scroll', function () {
-            var x = $(window).scrollTop();
-            if (x > 50) {
-                $('.back-top').addClass('h');
-            } else {
-                $('.back-top').removeClass('h');
-            }
-        });
-
-        $('.back-top').on('click', function (e) {
-            e.preventDefault();
-            $('html, body').animate({
-                scrollTop: 0
-            }, 1000);
-        });
-    });
-</script>
-<script src="app.js" defer></script>
+</header>
+<!-- Scripts optimized and moved to main pages for better performance -->
