--- a/index.html
+++ b/index.html
@@ -10,22 +10,39 @@
 	<meta name="robots" content="index,  follow">
 	<link rel="canonical" href="https://www.onemovie.in/">
 	<title>Hindu Temples & Pilgrimage</title>
+	
+	<!-- Critical CSS - load immediately -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-	<link rel="icon" href="../photo/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
-	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
-	<link rel="stylesheet" type="text/css" href="css/animate.css">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KJ3NX7H5P2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-KJ3NX7H5P2');
-</script>
+	
+	<!-- Non-critical CSS - load asynchronously -->
+	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"></noscript>
+	
+	<link rel="preload" href="css/owl.carousel.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="css/owl.carousel.css"></noscript>
+	
+	<link rel="preload" href="css/owl.theme.default.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="css/owl.theme.default.css"></noscript>
+	
+	<link rel="preload" href="css/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="css/animate.css"></noscript>
+	
+	<link rel="icon" href="../photo/favicon.ico" type="image/x-icon">
+	
+	<!-- Google Analytics - async -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-KJ3NX7H5P2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'G-KJ3NX7H5P2');
+	</script>
+	
+	<!-- Load CSS asynchronously -->
+	<script>
+	  (function(w){"use strict";if(!w.loadCSS){w.loadCSS=function(){}}var loadCSS=function(href,before,media){var doc=w.document;var ss=doc.createElement("link");var ref;if(before){ref=before}else{var refs=(doc.body||doc.getElementsByTagName("head")[0]).childNodes;ref=refs[refs.length-1]}var sheets=doc.styleSheets;ss.rel="stylesheet";ss.href=href;ss.media="only x";function ready(cb){if(doc.body){return cb()}setTimeout(function(){ready(cb)})}ready(function(){ref.parentNode.insertBefore(ss,before?ref:ref.nextSibling)});var onloadcssdefined=function(cb){var resolvedHref=ss.href;var i=sheets.length;while(i--){if(sheets[i].href===resolvedHref){return cb()}}setTimeout(function(){onloadcssdefined(cb)})};if(ss.addEventListener){ss.onloadcssdefined=onloadcssdefined}ss.onloadcssdefined(function(){ss.media=media||"all"});return ss};w.loadCSS=loadCSS})(typeof global!=="undefined"?global:this);
+	</script>
 </head>
 
 <body>
@@ -136,7 +153,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="wel-left01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-					<img src="photo/04.webp" alt="Hindu temple view">
+					<img src="photo/04.webp" alt="Hindu temple view" loading="lazy" width="600" height="400">
 				</div>
 				<div class="wel-right01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
 					<h6>ABOUT THIS PLATFORM</h6>
@@ -168,16 +185,16 @@
 			</div>
 			<div class="gallery-buttom row">
 				<div class="g-photo-left01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-					<img src="photo/g01.webp ">
+					<img src="photo/g01.webp" alt="Temple gallery" loading="lazy" width="600" height="400">
 				</div>
 				<div class="g-photo-right01 row col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
 					<div class="g-photo-right01-lpart col-xl-6 col-lg-6  col-md-6 col-sm-6 col-6">
-						<img src="photo/g02.webp">
-						<img src="photo/g03.webp">
+						<img src="photo/g02.webp" alt="Temple gallery" loading="lazy" width="300" height="200">
+						<img src="photo/g03.webp" alt="Temple gallery" loading="lazy" width="300" height="200">
 					</div>
 					<div class="g-photo-right01-rpart col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-						<img src="photo/g04.webp">
-						<img src="photo/g05.webp">
+						<img src="photo/g04.webp" alt="Temple gallery" loading="lazy" width="300" height="200">
+						<img src="photo/g05.webp" alt="Temple gallery" loading="lazy" width="300" height="200">
 					</div>
 				</div>
 			</div>
@@ -404,16 +421,11 @@
 
 
 
-	<!-- jQuery library -->
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-
-	<script src="js/owl.carousel.js"></script>
-
-	<!-- Popper JS -->
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-
-	<!-- Latest compiled JavaScript -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- Defer non-critical JavaScript libraries for better performance -->
+	<script defer src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+	<script defer src="js/owl.carousel.js"></script>
 
 
 	<script>
