your update message

--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="wel-left01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-					<img src="photo/04.webp" alt="Hindu temple view" loading="lazy" width="600" height="400">
+					<img src="photo/04.webp" alt="Hindu temple view" loading="lazy" width="100" height="100%">
 				</div>
 				<div class="wel-right01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
 					<h6>ABOUT THIS PLATFORM</h6>
-					<h1>Connecting Devotees With<br>Temples Across India</h1>
+					<h1>Connecting Devotees With Temples Across India</h1>
 					<p>
 						This website is dedicated to devotees who wish to learn about sacred Hindu temples, important
 						yatras, and spiritual events. Discover temple histories, explore photo galleries, and plan your
