--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="wel-left01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
-					<img src="photo/04.webp" alt="Hindu temple view" loading="lazy" width="100" height="100%">
+					<img src="photo/04.webp" alt="Hindu temple view" loading="lazy" width="100" height="auto">
 				</div>
 				<div class="wel-right01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
 					<h6>ABOUT THIS PLATFORM</h6>
