your update message

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<section class="welcome" id="about">
 		<div class="container">
 			<div class="row">
-				<div class="wel-left01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+				<div class="wel-left01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"   display: flex; align-items: center; >
 					<img src="photo/04.webp" alt="Hindu temple view" loading="lazy" width="100" height="auto">
 				</div>
 				<div class="wel-right01 col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
