--- a/index.html
+++ b/index.html
@@ -428,78 +428,11 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 	<script defer src="js/owl.carousel.js"></script>
 
-
-	<script>
-
-
-
-		$(document).ready(function () {
-
-
-
-			$('.bar').click(function () {
-				$(".side-bar").toggleClass("slide01");
-			});
-
-			$('.close').click(function () {
-				$(".side-bar").toggleClass("slide01");
-			});
-
-
-			$(".owl-carousel").owlCarousel({
-				items: 1,
-				loop: true,
-				mouseDrag: true,
-				nav: true,
-				dots: true,
-				autoplay: true,
-				autoplayTimeout: 3000,
-				// autoplayHoverPause:true,
-
-			});
-
-
-			$(window).scroll(function () {
-				var x = $(window).scrollTop();
-				if (x > 50) {
-					$('.back-top').addClass('h');
-				} else { $('.back-top').removeClass('h'); }
-			});
-
-
-			$(".back-top").click(function () {
-				$("html, body").animate({ scrollTop: 0 }, 1000);
-			});
-
-
-
-
-
-
-
-
-
-
-		});
-
-
-
-
-
-
-	</script>
+	<!-- Main app.js -->
 	<script src="app.js" defer></script>
+	
 	<script>
-		async function includeHTML(id, file) {
-			const res = await fetch(file);
-			const text = await res.text();
-			document.getElementById(id).innerHTML = text;
-		}
-
-		includeHTML("header", "header.html");
-		includeHTML("footer", "footer.html");
-	</script>
-	<script>
+		// Load header and footer
 		async function includeHTML(id, file) {
 			const res = await fetch(file);
 			const text = await res.text();
