feat: Redesign website to Incredible India style with new header, hero slider, blog section

--- a/footer.html
+++ b/footer.html
@@ -1,67 +1,215 @@
 <!DOCTYPE html>
 <html>
-<head>  
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>hindu temple</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
-	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
-	<link rel="stylesheet" type="text/css" href="css/animate.css">
-
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hindu Temple</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
+    <link rel="stylesheet" type="text/css" href="css/owl.theme.default.css">
 </head>
+
 <body>
 
-<section class="icons">
-		<ul>
-			
-			<li><a href="https://api.whatsapp.com/send?phone=7357346016&text=what'sapp%20number"> <img src="photo/w.png"></a></li>
-			<li class="back-top"><a href="#" > <img src="photo/u.png"></a></li>
-			
-			
-		</ul>
-		
-	</section>
-    	<footer class="temple-footer">
- 		<div class="container">
- 			<div class="row">
- 				<div class="temple-footer-box01 col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12">
- 					<ul class=" row col-xl-5 col-lg-5  col-md-5 col-sm-12 col-12" >
- 						<li><a href="index.html">Home</a></li>
- 						<li><a href="aashram.html">Ashram</a></li>
- 						<li><a href="#">About</a></li>
- 						<li><a href="#">Shop</a></li>
- 					</ul>
- 				</div>
- 				<div class="temple-footer-box02 col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
- 					<a href="#" ><img src="photo/logo-2.webp"></a>
- 				</div>
- 				<div class="temple-footer-box03 col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12">
- 					<ul class=" row col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12">
- 						<li><a href="event.html">Events</a></li>
- 						<li><a href="gallery.html">Gallery</a></li>
- 						<li><a href="#">News</a></li>
- 						<li><a href="contect.html">Contacts</a></li>
- 					</ul>
- 				</div>
- 			</div>
- 		</div>
- 	</footer>
+    <!-- Fixed Icons -->
+    <section class="icons">
+        <ul>
+            <li><a href="https://api.whatsapp.com/send?phone=7357346016&text=whatsapp%20number"><img src="photo/w.webp" alt="WhatsApp"></a></li>
+            <li class="back-top"><a href="#"><img src="photo/u.webp" alt="Back to top"></a></li>
+        </ul>
+    </section>
 
- 	
+    <!-- Footer -->
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+                    <div class="footer-widget">
+                        <h4>Quick Links</h4>
+                        <ul>
+                            <li><a href="index.html"><i class="fas fa-chevron-right"></i> Home</a></li>
+                            <li><a href="aashram.html"><i class="fas fa-chevron-right"></i> Temples</a></li>
+                            <li><a href="gallery.html"><i class="fas fa-chevron-right"></i> Gallery</a></li>
+                            <li><a href="event.html"><i class="fas fa-chevron-right"></i> Events</a></li>
+                            <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+                    <div class="footer-widget">
+                        <h4>Temples</h4>
+                        <ul>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Jyotirlinga</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Char Dham</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Shakti Peeth</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Vaishnav Temples</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Shiv Temples</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+                    <div class="footer-widget">
+                        <h4>Resources</h4>
+                        <ul>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Darshan Timings</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Festival Calendar</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Travel Guide</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Pooja Details</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-right"></i> Accommodation</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+                    <div class="footer-widget">
+                        <h4>Contact Us</h4>
+                        <ul class="footer-contact">
+                            <li><a href="#"><i class="fas fa-map-marker-alt"></i> Nayapura Chokha, Jodhpur</a></li>
+                            <li><a href="tel:7357346016"><i class="fas fa-phone"></i> +91 7357346016</a></li>
+                            <li><a href="mailto:lalit979932@gmail.com"><i class="fas fa-envelope"></i> lalit979932@gmail.com</a></li>
+                        </ul>
+                        <div class="footer-social">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-logo">
+                <img src="photo/logo-2.webp" alt="Logo">
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2026 OneMovie Temple | Created by Lalit Kachhawaha</p>
+            </div>
+        </div>
+    </footer>
 
-<div class="heart">
-   	<p>
-   		Made  by <a href="index.html"> " lalit kachhawaha "</a>
-   	</p>
-   </div>
+    <style>
+        /* Footer Styles - Incredible India Style */
+        .main-footer {
+            background: linear-gradient(135deg, #000080 0%, #000050 100%);
+            padding: 60px 0 20px;
+            color: white;
+        }
 
+        .footer-widget h4 {
+            color: #FF9933;
+            margin-bottom: 25px;
+            font-size: 20px;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-family: 'Playfair Display', serif;
+        }
 
- 	
+        .footer-widget ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
+        .footer-widget ul li {
+            margin-bottom: 12px;
+        }
+
+        .footer-widget ul li a {
+            color: rgba(255,255,255,0.8);
+            text-decoration: none;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .footer-widget ul li a i {
+            color: #FF9933;
+            font-size: 10px;
+        }
+
+        .footer-widget ul li a:hover {
+            color: #FF9933;
+            padding-left: 10px;
+        }
+
+        .footer-contact li a {
+            align-items: flex-start;
+        }
+
+        .footer-contact li a i {
+            margin-top: 5px;
+        }
+
+        .footer-social {
+            display: flex;
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .footer-social a {
+            width: 40px;
+            height: 40px;
+            background: rgba(255,153,51,0.2);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #FF9933;
+            transition: all 0.3s ease;
+        }
+
+        .footer-social a:hover {
+            background: #FF9933;
+            color: white;
+            transform: translateY(-3px);
+        }
+
+        .footer-logo {
+            text-align: center;
+            margin: 40px 0;
+            padding: 30px 0;
+            border-top: 1px solid rgba(255,255,255,0.1);
+            border-bottom: 1px solid rgba(255,0.1,255,255);
+        }
+
+        .footer-logo img {
+            max-height: 80px;
+        }
+
+        .footer-bottom {
+            text-align: center;
+            padding-top: 20px;
+            color: rgba(255,255,255,0.6);
+        }
+
+        .footer-bottom p {
+            margin: 0;
+            font-size: 14px;
+        }
+
+        .footer-bottom p a {
+            color: #FF9933;
+            text-decoration: none;
+        }
+
+        .footer-bottom p a:hover {
+            color: white;
+        }
+
+        @media (max-width: 768px) {
+            .footer-widget {
+                margin-bottom: 30px;
+            }
+
+            .footer-logo img {
+                max-height: 60px;
+            }
+        }
+    </style>
 
 </body>
+
 </html>
